--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "antd-mobile-icons": "^0.3.0",
         "classnames": "^2.3.2",
         "dayjs": "^1.11.7",
+        "eslint-plugin-prettier": "^5.1.3",
         "graphql": "^16.6.0",
         "lodash": "^4.17.21",
         "md5": "^2.3.0",
